# ird-manuscript

./: .gitignore  .netrc  README.md  _pyproject.toml  bib.bib  download_data_files.sh  pyproject.toml  run_all_catchments.sh  run_all_uncertainty.sh
data/: MEaSUREs_120m.nc.aux.xml  NuupKangerlua_ssc_results.ods  SAMPLEWEIGHTS_EQ22icebergsamples.csv  SAMPLEWEIGHTS_EQ22icebergsamples.xlsx  all-icebergs.geojson  all_iceberg_samples.ods  ce-icebergs.geojson  iceberg_rsc.ods  plot_data.py  sw-icebergs.geojson  sw-icebergs.qmd
data/shapefiles/: bredegletsjer.geojson  charcot-gletscher.geojson  dode-brae.geojson  eielson-gletsjer.geojson  kangiata-nunaata-sermia.geojson  kista-dan-gletsjer.geojson  sermeq-avannarleq.geojson
field-data/: .~lock.all-iceberg-locations.csv#  .~lock.all_iceberg_samples.ods#  Disko_2021_ssc.csv  East_Greenland_2018_ssc.csv  East_Greenland_2019_ssc.csv  IRD_sample_sheet.ods  ISSEDISAAFFIK_withSTDpericeberg.xlsx  Kangertittivaq2018.csv  NuupKangerlua_ssc_results.csv  NuupKangerlua_ssc_results.ods  SAMPLEWEIGHTS_EQ22icebergsamples.csv  all-iceberg-locations.csv  all_iceberg_samples.csv  collate.py  plot_data.py  ~$IRD_sample_sheet.ods
gis/: cw-icebergs.geojson  sample-ice-basins.qgz
ird_model/components/: __init__.py  dispersed_layer.py  distributed_drainage_system.py  frozen_fringe.py  shallow_ice_approximation.py  simple_glacial_eroder.py  tvd_advection.py
ird_model/models/: fluxes.py  generate_input_files.py  hydrology.py  mesh.py  plot_model_fields.py  run_models.py  sediment.py  sensitivity.py  uncertainty.py
ird_model/utils/: core.py  matrix.py
models/: generate_grids.py  populate_fields.py  workflow.txt
models/hydrology/: plot_results.py  run_to_steady_state.py
models/inputs/: bounds.pickle  largest_frozen_area.geojson
output/: catchment_sediment_flux_statistics.csv  comprehensive_catchment_export.csv  plot_catchments.py  plot_fluxes.py  plot_layers.py  plot_uncertainty.py
text/: discussion.txt.odt  greenland-fluxes.txt.odt  iceberg-observations.txt  icebergs-table-of-vars.tgn  intro.txt  model-results.txt.odt  sediment-model
(+57 files in other folders)
