[tool.poetry]
name = "ird-manuscript"
version = "0.1.0"
description = ""
authors = ["Ethan Pierce <ethan.pierce@colorado.edu>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
netcdf4 = "^1.7.1.post1"
h5netcdf = "^1.3.0"
seaborn = "^0.13.2"
glacierbento = {path = "/home/egp/repos/glacierbento"}

[build-system]
requires = ["poetry-core", "numpy<2"]
build-backend = "poetry.core.masonry.api"
