[project]
authors = [{name = "Ethan", email = "ethan.g.pierce@dartmouth.edu"}]
dependencies = ["landlab-triangle>=0.0.2,<0.0.3"]
name = "ird_model"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
ird_model = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
landlab = ">=2.10.1,<3"
scipy = ">=1.16.1,<2"
matplotlib = ">=3.10.5,<4"
shapely = ">=2.1.1,<3"
xarray = ">=2025.8.0,<2026"
geopandas = ">=1.1.1,<2"
jax = ">=0.7.0,<0.8"
equinox = ">=0.13.0,<0.14"
jaxtyping = ">=0.3.2,<0.4"
tomli = ">=2.2.1,<3"
